# CryoSoft

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  GLOSSARY.md  IV2025-11-01_1.csv  Makefile  PYMEASURE_REFERENCE.md  README.md  STATUS.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.claude/commands/: gui-edit.md
.claude/skills/diagnose-connections/: README.md  SKILL.md  connection_status.py  device_query.py  diagnostic_utils.py  gpib_scan.py  oxford_query.py  oxford_scan.py  serial_scan.py
.claude/skills/gui-edit/: SKILL.md
.claude/skills/setup-commission/: SKILL.md
.claude/skills/setup-supervisor/: SKILL.md
.claude/skills/troubleshoot-runtime/: SKILL.md
.claude/skills/write-measurement-vi/: SKILL.md
.github/workflows/: ci.yml
GUI/: test_gui.py
cryosoft/: __init__.py  main.py
cryosoft/configs/: README.md
cryosoft/configs/12t-cryo/: devices.yaml  monitor.yaml  setup.md
cryosoft/configs/a-sample-real-cryostat/: devices.yaml
cryosoft/configs/sim_cryostat/: devices.yaml  monitor.yaml
cryosoft/configs/sim_real_cryostat/: devices.yaml  monitor.yaml
cryosoft/core/: README.md  __init__.py  config_catalog.py  data_manager.py  decorators.py  events.py  exceptions.py  gates.py  logging_config.py  operation.py  operational_status.py  orchestrator.py  plan.py  procedure.py  station.py  sweep_builder.py  watchdog.py
cryosoft/drivers/: README.md  __init__.py  keithley_2182a.py  keithley_6221.py  keithley_705.py  lakeshore_335.py  oxford_ilm200.py  oxford_ilm210.py  oxford_itc503.py  oxford_mercury_ips.py  sim_keithley_2182a.py  sim_keithley_2400.py  sim_keithley_6221.py  sim_keithley_705.py  sim_lakeshore_335.py  sim_lockin.py  sim_oxford_ilm200.py  sim_oxford_ilm210.py  sim_oxford_ips120.py  sim_oxford_itc503.py  sim_rotator.py  sim_tensormeter_rtm2.py  tensormeter_rtm2.py
cryosoft/gui/: README.md  __init__.py  app_settings.py  config_editor.py  config_menu.py  debug_window.py  diagnostics_window.py  experiment_dialogs.py  form_autosave.py  instrument_front_panel.py  instrument_panel.py  lifecycle_toggle.py  live_plot_panel.py  log_panel.py  monitor_history.py  monitor_window.py  notification_banner.py  offline_panel.py  operations_panel.py  other_devices.py  param_form.py  procedure_discovery.py  procedure_params_panel.py  procedure_window.py  queue_panel.py  sample_info_panel.py  servicing_log_page.py  session.py  session_dialogs.py  session_info_panel.py  setup_dialogs.py  sweep_axis_widget.py  theme.py  trend_plot_panel.py  trends_quadrant.py  window_geometry.py
cryosoft/logs/: connection_status.json  troubleshoot.jsonl
cryosoft/logs/incidents/: 2026-07-16-commissioning-12t-cryo.md
cryosoft/procedures/: README.md  __init__.py  field_sweep.py  field_sweep_dc.py  field_sweep_iv.py  temperature_sweep.py  temperature_sweep_dc.py
cryosoft/procedures/operations/: README.md  __init__.py  helium_fill.py  sample_change.py
cryosoft/session/: README.md  __init__.py  manager.py  models.py  servicing_log.py  store.py
cryosoft/troubleshoot/: README.md  __init__.py  __main__.py  cli.py  engine.py  status_reader.py
cryosoft/virtual_instruments/: README.md  __init__.py  base.py  level_ilm200.py  magnet_ips120.py  measurement_delta_mode.py  rampable.py  temperature_itc503.py
cryosoft/virtual_instruments/level/: README.md  cryogen_level_meter.py
cryosoft/virtual_instruments/magnet/: README.md  superconducting_magnet.py  superconducting_magnet_persistent.py  switch_heater.py
cryosoft/virtual_instruments/measurement/: README.md  dc_separate_measurement.py  dc_single_instrument.py  lockin_harmonic.py  measurement_dc_mode.py  measurement_delta_mode.py  tensormeter_rtm2_measurement.py
cryosoft/virtual_instruments/rotator/: README.md  rotator.py
cryosoft/virtual_instruments/switch/: README.md  __init__.py  switch_matrix.py
cryosoft/virtual_instruments/temperature/: README.md  lakeshore_335_sample_temperature_controller.py  sample_temperature_controller.py  vti_temperature_controller.py
cryostat/: DEVELOPER_GUIDE.md  QUICK_REFERENCE.md  README.md  __init__.py
cryostat/actions/: __init__.py  base.py  level_meter_actions.py  magnet_actions.py  temperature_actions.py
cryostat/config/: __init__.py  cryostat_mock.yaml  cryostat_real.yaml  factory.py  loader.py
cryostat/core/: __init__.py  cryostat.py  device_wrapper.py  lock_manager.py  logger.py
cryostat/drivers/: __init__.py
cryostat/drivers/base/: __init__.py  level_meter_base.py  magnet_base.py  temperature_base.py
cryostat/drivers/mock/: __init__.py  (+3 more)
cryostat/examples/: __init__.py  basic_usage.py
cryostat/tests/: __init__.py  test_actions.py  test_cryostat.py  test_mock_drivers.py
data/: Field Sweep IV_20260406_233555.h5  Field Sweep IV_20260406_233831.h5  sample_field_sweep_iv.h5
docs/plans/: agent-native-architecture.md  agentic-operation-roadmap.md  complete-instrument-vis.md  cryogenics-logbook.md  operation-concurrency-and-error-scoping.md  session-handling-architecture.md  session-management-layer.md  unified-servicing-log-and-run-recording.md  unified-session-record.md
playground/: K2400_test.py  iv_keithley.py
prmpts/: plan_v1.md
tests/: README.md  __init__.py  conftest.py  test_config_catalog.py  test_config_editor.py  test_config_validation.py  test_conformance.py  test_core_gates.py  test_cryogenics_panel.py  test_diagnostic_utils.py  test_field_voltage_procedure.py  test_form_autosave.py  test_foundation.py  test_gui.py  test_helium_fill.py  test_l0_ilm210.py  test_l0_keithley_6221_error_queue.py  test_l0_lakeshore_335.py  test_l0_new_drivers.py  test_l0_simulated.py  test_l0_switch_driver.py  test_l1_new_vis.py  test_l1_switch_vi.py  test_l1_virtual_instruments.py  test_l2_station.py  test_l3_orchestrator.py  test_l4_procedure.py  test_l5_data_manager.py  test_lifecycle_toggle.py  test_logging_config.py  test_measurement_dc_vi.py  test_monitor_history.py  test_new_procedures.py  test_operation_readiness.py  test_operational_status.py  test_operations.py  test_operations_panel.py  test_plan.py  test_sample_change.py  test_servicing_log.py  (+11 more)
(+11 files in other folders)
